--- a/1.js_free/7.2DOM属性和方法.html
+++ b/1.js_free/7.2DOM属性和方法.html
@@ -51,10 +51,10 @@
     console.log(oDiv.children);
     console.log(oDiv.parentNode);
     console.log(oDiv.previousSibling);//获取的是回车节点
-    console.log(oDiv.previousSibling.previousSibling);//获取的是回车节点
+    console.log(oDiv.previousSibling.previousSibling);
     console.log(oDiv.previousElementSibling);
     console.log(oDiv.nextSibling);//获取的是回车节点
-    console.log(oDiv.nextSibling.nextSibling);//获取的是回车节点
+    console.log(oDiv.nextSibling.nextSibling);
     console.log(oDiv.nextElementSibling);
 
     /*
