--- a/1.js_free/css0.vertical-align.html
+++ b/1.js_free/css0.vertical-align.html
@@ -8,7 +8,7 @@
         ul{list-style:none;}
         ul li{vertical-align:middle;}
         ul .special{width:100px;height:100px;display:inline-block;background-color:lightblue;color:#ffffff;}
-        ul .common{display:inline;}
+        ul .common{display:inline-block;}
     </style>
 </head>
 <body>
