--- a/1.js_free/7.2DOM属性和方法.html
+++ b/1.js_free/7.2DOM属性和方法.html
@@ -46,6 +46,8 @@
     *
     *
     * */
+    console.log(document.parentNode);
+
     var oDiv=document.getElementById('div1');
     console.log(oDiv.childNodes);
     console.log(oDiv.children);
