--- a/1.js_free/1.数据类型.html
+++ b/1.js_free/1.数据类型.html
@@ -93,6 +93,7 @@
      *       1、typeof运算符：typeof 要检查的值，返回值：是一个字符串，包含了数据类型字符
      *           "number","string","boolean","undefined","object","function"
      *           typeof null或typeof(null)的结果是"object"
+     *           typeof NaN结果为"number"
      *           typeof不能检查object下细分的类
      *           console.log(typeof typeof typeof typeof []);    ==> "string"
      *       2、instanceof运算符
