--- a/other_expand/0.JS性能优化.html
+++ b/other_expand/0.JS性能优化.html
@@ -20,6 +20,11 @@
     * 优化方式三：使用事件代理来处理DOM
     *   参见other_expand 1.1event.html 跨浏览器事件操作
     * */
+
+    /*
+    * 优化方式四：函数节流、数组分块
+    *   参见1.js_free 8.3定时器及高级应用
+    * */
 </script>
 </body>
 </html>
