--- a/2.js_first/day_01/this.html
+++ b/2.js_first/day_01/this.html
@@ -58,7 +58,7 @@
 
 
 /*
-* 改变this指向：call、apply、bind
+* 改变this指向：call、apply、bind(try-catch  with等不常用)
 * 	call和apply一样，直接饮用在方法上；而bind绑定this后后返回一个方法，核心还是apply，在对象字面量方式经常用
 * 	function(){}.bind(this要绑定的对象,普通参数1,普通参数2,...)
 *
