--- a/3.js_second/day_01/3.原型与call.html
+++ b/3.js_second/day_01/3.原型与call.html
@@ -53,7 +53,7 @@
 //    fn1.call.call(fn2);
 //    Function.prototype.call.call(fn1);
 //    Object.call.call(fn1);
-//    call.call()只能是函数对象或者Function.prototype或者Object
+//    call.call()//只能是函数对象或者Function.prototype或者Object
 
 
 //    function fn1(){
