--- a/other_expand/0.JS性能优化.html
+++ b/other_expand/0.JS性能优化.html
@@ -25,6 +25,11 @@
     * 优化方式四：函数节流、数组分块
     *   参见1.js_free 8.3定时器及高级应用
     * */
+
+    /*
+     * 优化方式五：回流与重绘
+     *
+     * */
 </script>
 </body>
 </html>
