--- a/4.js_third/day_01/1.2盒子模型.html
+++ b/4.js_third/day_01/1.2盒子模型.html
@@ -14,15 +14,32 @@
 </head>
 <body>
 <div id="div1">
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
-    这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内容！computer science public static void main  console  地方这里是盒子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    子的内容！这里是盒子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内容！这里是盒子的    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    内容！这里是盒     这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    子的内容！    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    uter science public static voiuter science public static voiuter science public static voiuter science public static voiuter science public static voi
+    这里是盒子的内容！这里是    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内容！这里    这里是盒子的内容！这里是    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    是盒子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内容！这里是盒    这里是    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    容！这里是盒子的内容！这里是    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    盒子的内容！
+    这里是盒子的内容！这里是盒子的内容    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    ！这里是盒子的内容！这里是盒子的内容！
+    这里是盒子的内容！这里是盒子的内容    这里    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    ！这里是盒子的内容！这里是    这里是盒子的内容！这里是盒子的内容！这里是盒computer science public static void main  consol子的内容！这里是盒子的内容！
+    盒子的内容！
     <br>
     <br>
     <br>
